--- a/Jinjector.config
+++ b/Jinjector.config
@@ -7,5 +7,13 @@
 				"description": "This is for testing",
 				"URL": "/test1.js"
 			}
+		],
+	"stylesheets:"
+		[
+			{
+				"name": "test1 stylesheet",
+				"description": "This is for testing",
+				"URL": "/test1.css"
+			}
 		]
 }
