Added the possibility to specify the name of the configuration file

--- a/Jinjector.config
+++ b/Jinjector.config
@@ -6,6 +6,11 @@
 				"name": "test1 script",
 				"description": "This is for testing",
 				"URL": "/test1.js"
+			},
+      {
+				"name": "test2 script",
+				"description": "This is a second script valid for all configurations",
+				"URL": "/test1.js"
 			}
 		],
 	"stylesheets:"
