refactored the functions for loading scripts and stylesheets

--- a/Jinjector.config
+++ b/Jinjector.config
@@ -10,7 +10,8 @@
       {
 				"name": "test2 script",
 				"description": "This is a second script valid for all configurations",
-				"URL": "/test1.js"
+				"URL": "/test1.js",
+        "trigger": "(cmp_set_test1 == true) || (cmp_set_all == true)"
 			}
 		],
 	"stylesheets":
