Added possibility to trigger scripts and stylesheets with a trigger expression

--- a/Jinjector.config
+++ b/Jinjector.config
@@ -11,7 +11,7 @@
 				"name": "test2 script",
 				"description": "This is a second script valid for all configurations",
 				"URL": "/test1.js",
-        "trigger": "(cmp_set_test1 == true) || (cmp_set_all == true)"
+        "trigger": "(set_test1 == true) || (set_all == true)"
 			}
 		],
 	"stylesheets":
