--- a/Jinjector.config.json
+++ b/Jinjector.config.json
@@ -5,7 +5,7 @@
 		{
 			"name": "test1 script",
 			"description": "This is for testing. It only gets loaded when the variable load_script_1 is set to true",
-			"URL": "/example/test1.js",
+			"URL": "test1.js",
 			"trigger": "(load_script_1 == true)"
 		},
 		{
