--- a/Jinjector.config.json
+++ b/Jinjector.config.json
@@ -6,7 +6,14 @@
 			"name": "test1 script",
 			"description": "This is for testing. It only gets loaded when the variable load_script_1 is set to true",
 			"URL": "test1.js",
-			"trigger": "(load_script_1 == true)"
+			"trigger": "(load_script_1 == true)",
+				"attributes":
+					[
+						{				
+							"name": "data-test",
+							"value": "test"
+						}
+					]
 		},
 		{
 			"name": "test2 script",
