added support for adding HTML text, now Jinjector starts directly after loading, unless a trigger waits for the dom to be loaded

--- a/Jinjector.config.json
+++ b/Jinjector.config.json
@@ -6,6 +6,7 @@
 			"name": "test1 script",
 			"description": "This is for testing. It only gets loaded when the variable load_script_1 is set to true",
 			"URL": "test1.js",
+			"inlineLoading": true,
 			"trigger": "(load_script_1 == true)",
 				"attributes":
 					[
@@ -28,6 +29,14 @@
 			"description": "This is for testing",
 			"URL": "https://unpkg.com/purecss@1.0.1/build/pure-min.css",
 			"trigger": "(load_css_1 == true)"
+		}
+	],
+	"html":
+	[
+		{
+			"name": "test Snippet",
+			"URL":"test_Snippet.txt",
+			"targetElement": "head"
 		}
 	]
 }
